# rust-parser-typechecker

./: .#doub  Cargo.toml  history.txt  test.expr  test.f
src/: bin.rs  history.txt  lib.rs  main.rs
src/error/: error.rs  formatter.rs  history.txt  mod.r  mod.rs
src/lexing/: mod.rs  token_kind.rs
src/macros/: arrow.rs  map.rs  mod.rs  set.rs
src/parsing/: expr.rs  mod.rs  parser.rs  precedence.rs  span.rs
src/parsing/parselets/: history.txt  mod.rs
src/parsing/parselets/left/: application.rs  binary.rs  mod.rs
src/parsing/parselets/null/: .#boolean.rs  block.rs  boolean.rs  group.rs  id.rs  integral.rs  lambda.rs  letbinding.rs  mod.rs  prefixop.rs  string.rs
src/typechecking/: constraint.rs  env.rs  mod.rs  substitution.rs  typechecker.rs  typing.rs  tyscheme.rs
src/util/: assert.rs  counter.rs  dummy.rs  mod.rs  split.rs
