[package]
name = "parsertypechecker"
version = "0.1.0"
authors = ["= <andyyu2004@gmail.com>"]
edition = "2018"

[lib]
name = "parserlib"
path = "src/lib.rs"

[[bin]]
name = "parserbin"
path = "src/bin.rs"


[dependencies]
rustyline = "5.0.4"
regexlexer = { path = "../regexlexer" }
variable-gen = { path = "../variable-gen" }
regex = "1"
