[package]
name = "parsertypechecker"
version = "0.1.0"
authors = ["= <andyyu2004@gmail.com>"]
edition = "2018"

[lib]
name = "parserlib"
path = "src/lib.rs"

[[bin]]
name = "parserbin"
path = "src/bin.rs"


[dependencies]
rustyline = "5.0.4"
regexlexer = { git = "ssh://git@github.com/andyyu2004/rust-regex-lexer.git" }
variable-gen = { git = "ssh://git@gitlab.com/andyyu2004/name-generator.git" }
regex = "1"
colour = "0.3.0"
